# mcp-dap

./: .gitignore  ARCHITECTURAL_REVIEW.md  CLAUDE.md  Cargo.toml  Error.md  GEMINI.md  IMPLEMENTATION_PLAN.md  LICENSE  MCP_DAP_PRD.md  README.md  TODO.md  feedback_mcp_dap.md  install.sh  test_compact.py  test_compact_output.py  test_pagination.py
.claude/projects/-home-angalato-workspace-mcp-dap/memory/: MEMORY.md  feedback_no_python_wrappers.md
.gemini/: settings.json
.github/workflows/: ci.yml  release.yml
src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src/context/: mod.rs  pagination.rs  sanitize.rs  source.rs  truncation.rs
src/dap/: client.rs  codec.rs  mod.rs  state_machine.rs  transport.rs  types.rs
src/services/: event_loop.rs
src/tools/: breakpoint.rs  execution.rs  feedback.rs  inspect.rs  launch.rs  mod.rs
tests/: integration_test.rs  repro_fork.rs  repro_mutex.rs
tests/fixtures/: fork  fork.rs  loop.go  loop.py  loop_go  mutex_block.rs
