[package]
name = "mcp-dap"
version = "0.3.0"
edition = "2024"

[dependencies]
rmcp = { version = "1.2", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
memchr = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
lto = true
strip = true
codegen-units = 1

[lints.clippy]
all = "deny"
pedantic = "deny"

[[example]]
name = "fork"
path = "tests/fixtures/fork.rs"

[[example]]
name = "mutex_block"
path = "tests/fixtures/mutex_block.rs"
